--- a/T2102/config.cfg
+++ b/T2102/config.cfg
@@ -2,14 +2,14 @@
 test = hello
 
 [trainer]
-ex = 56
+ex = 98
 epoch = 3
 
 [dataset]
-data_size = 5000
+data_size = all
 batch_size = 64
-balance_testset = True
+balance_testset = False
 
 [log]
-tensorboard = False
+tensorboard = True
 
