update and new files

--- a/T2102/config.cfg
+++ b/T2102/config.cfg
@@ -1,16 +1,28 @@
 [DEFAULT]
 test = hello
 
+[model]
+model = resnet50, resnet18
+index = 0
+
 [trainer]
-ex = 159
-epoch = 30
-unfreeze = 1/3
+ex = 294
+epoch = 1
+unfreeze = 1/2
+
+[loss]
+weight_loss = True
 
 [dataset]
 data_size = all
 batch_size = 64
 balance_testset = False
+base_dataset = True
+base_aug = False
+k-fold = True
+k-fold-num = 5
+k-fold-epoch = 1
 
 [log]
-tensorboard = True
+tensorboard = False
 
