--- a/T2102/config.cfg
+++ b/T2102/config.cfg
@@ -3,11 +3,11 @@ test = hello
 
 [model]
 model = resnet50, resnet18
-index = 0
+index = 1
 
 [trainer]
-ex = 294
-epoch = 1
+ex = 304
+epoch = 2
 unfreeze = 1/2
 
 [loss]
@@ -19,9 +19,9 @@ batch_size = 64
 balance_testset = False
 base_dataset = True
 base_aug = False
-k-fold = True
-k-fold-num = 5
-k-fold-epoch = 1
+k-fold = False
+k-fold-num = 2
+k-fold-epoch = 2
 
 [log]
 tensorboard = False
