--- a/config.cfg
+++ b/config.cfg
@@ -3,10 +3,10 @@ seed = 2141
 epochs = 20
 dataset = MaskBaseDataset
 augmentation = BaseAugmentation
-resize = 128, 96
+resize = 260, 260
 batch_size = 64
 valid_batch_size = 1000
-model = resnet50
+model = efficient
 optimizer = Adam
 lr = 1e-3
 val_ratio = 0.2
